src/assets/styles/sections/product.scss
.product-wrapper {
  display: grid;
  grid-template-columns: 230px 1fr 230px;
  max-width: 100%;
}

.product-container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
  grid-template-rows: 800px repeat(auto-fit, minmax(350px, max-content));
  grid-column-gap: 2px;
  grid-row-gap: 2px;
  max-width: 100%;
  margin-top: 12%;
  font-family: "TotentanzSlanted";

  h1 {
    font-family: "TotentanzSlanted";
    font-size: 48px;
    margin-bottom: 25px;
  }
}

.product-information-container {
  padding-top: 5%;
  padding-left: 15%;

  .price {
    font-size: 30px;
    margin-bottom: 25px;
  }
}

.one-size {
  display: block;
  margin-top: 5%;
  text-transform: uppercase;
  border: 1px solid black;
  max-width: 160px;
  padding: 12px 5px;
  text-align: center;
  font-size: 17px;
}

button.add-to-cart {
  border: none;
  background: black;
  color: white;
  padding: 12px 5px;
  text-transform: uppercase;
  font-size: 17px;
  font-family: "InterstateBold";
  margin: 2% 0 5% 0;
  width: 160px;
}

.bottom-product-cart {
  grid-column-start: 1;
  grid-column-end: 3;
  display: inline-grid;
  justify-items: center;
  align-items: center;
}

.black-point {
  display: block;
  text-align: center;
  font-size: 30px;
}

/* MEDIA QUERIES */
@media only screen and (max-width: 768px) {
  .product-wrapper {
    grid-template-columns: 1fr;

    .product-container {
      grid-template-columns: 1fr;
    }

    .product-information-container {
      padding-left: 0;

      h1 {
        text-align: center;
        font-size: 28px;
      }

      form {
        text-align: center;
      }

      .one-size {
        margin: 0 auto;
      }

      .rte {
        padding-left: 35px;
        padding-right: 20px;
      }
    }
  }
}

